--- a/SpringRestApis/src/main/resources/application.properties
+++ b/SpringRestApis/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/myhiber
 spring.datasource.username=root
-#spring.datasource.password=
+spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.show_sql=true
