--- a/SpringRestApis/pom.xml
+++ b/SpringRestApis/pom.xml
@@ -43,6 +43,20 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version> <!-- Use the latest version available -->
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+<!--			<version>3.2.4</version>-->
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
